--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Recycler</string>
+    <string name="app_name">Phone Book</string>
     <string name="crt">Create a Contact</string>
     <string name="search_hint">Name</string>
     <string name="info">ⓘ</string>
-
 </resources>
